--- a/TP1/python/experimentos.ipynb
+++ b/TP1/python/experimentos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,13 @@
     "    \n",
     "    # Crear proceso para ejecutar el codigo.\n",
     "    output_dir = join(getcwd(), 'resultados')\n",
-    "    process = subprocess.Popen([\"../../src/tp1\", archivo_instancia, str(p)], cwd=output_dir)\n",
+    "    process = subprocess.Popen([\"../src/tp1.exe\", archivo_instancia, str(p)], cwd=output_dir)\n",
     "\n",
     "    # Correr experimento.\n",
     "    exit_code = process.wait()\n",
     "\n",
     "    # Verificar que el proceso no fallo.\n",
-    "    if exit_code != 0: raise(F\"Hubo un error en la experimentacion para el algoritmo con la instancia {archivo_instancia}.\")\n",
+    "    if exit_code != 0: raise(Exception(F\"Hubo un error en la experimentacion para el algoritmo con la instancia {archivo_instancia}.\"))\n",
     "    \n",
     "    end = time.time()\n",
     "    return end-start;"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,22 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentos.append((\"..\\\\..\\\\tests\\\\test_15_segundos.txt\", 0.9))\n",
-    "experimentos.append((\"..\\\\..\\\\tests\\\\test_30_segundos.txt\", 0.8))\n",
-    "experimentos.append((\"..\\\\..\\\\tests\\\\test_aleatorio_desordenado.txt\", 0.76))\n",
-    "experimentos.append((\"..\\\\..\\\\tests\\\\test_completo.txt\", 0.5))\n",
-    "experimentos.append((\"..\\\\..\\\\tests\\\\test_sin_links.txt\", 0.64))\n",
-    "experimentos.append((\"..\\\\..\\\\tests\\\\test_trivial.txt\", 0.3))\n",
+    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_15_segundos.txt\", 0.9))\n",
+    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_30_segundos.txt\", 0.8))\n",
+    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_aleatorio_desordenado.txt\", 0.76))\n",
+    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_completo.txt\", 0.5))\n",
+    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_sin_links.txt\", 0.64))\n",
+    "# experimentos.append((\"..\\\\..\\\\tests\\\\test_trivial.txt\", 0.3))\n",
     "#######################################\n",
-    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_200_links_P:0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_400_links_P:0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_600_links_P:0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_800_links_P:0.7.txt\", 0.7))\n",
-    "experimentos.append((\"..\\\\..\\\\python\\\\instancias\\\\3 Principales\\\\1000_paginas_1000_links_P:0.7.txt\", 0.7))"
+    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_200_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_400_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_600_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_800_links_P_0.7.txt\", 0.7))\n",
+    "experimentos.append((\"..\\\\instancias\\\\3 Principales\\\\1000_paginas_1000_links_P_0.7.txt\", 0.7))"
    ]
   },
   {
@@ -110,134 +110,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Corriendo experimento: 1/11 (..\\..\\tests\\test_15_segundos.txt)\n",
+      "Corriendo experimento: 1/5 (..\\instancias\\3 Principales\\1000_paginas_200_links_P_0.7.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
       "count    5.000000\n",
-      "mean     0.006352\n",
-      "std      0.001291\n",
-      "min      0.005325\n",
-      "25%      0.005733\n",
-      "50%      0.005759\n",
-      "75%      0.006385\n",
-      "max      0.008560\n",
+      "mean     0.337199\n",
+      "std      0.009152\n",
+      "min      0.323078\n",
+      "25%      0.334630\n",
+      "50%      0.338228\n",
+      "75%      0.343389\n",
+      "max      0.346669\n",
       "dtype: float64\n",
-      "Corriendo experimento: 2/11 (..\\..\\tests\\test_30_segundos.txt)\n",
+      "Corriendo experimento: 2/5 (..\\instancias\\3 Principales\\1000_paginas_400_links_P_0.7.txt)\n",
       "Estadísticas de los tiempos de ejecución:\n",
       "count    5.000000\n",
-      "mean     0.006151\n",
-      "std      0.001003\n",
-      "min      0.005298\n",
-      "25%      0.005429\n",
-      "50%      0.005545\n",
-      "75%      0.007117\n",
-      "max      0.007366\n",
+      "mean     0.335024\n",
+      "std      0.002123\n",
+      "min      0.332582\n",
+      "25%      0.333619\n",
+      "50%      0.334519\n",
+      "75%      0.336772\n",
+      "max      0.337629\n",
       "dtype: float64\n",
-      "Corriendo experimento: 3/11 (..\\..\\tests\\test_aleatorio_desordenado.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.004951\n",
-      "std      0.000954\n",
-      "min      0.003943\n",
-      "25%      0.004015\n",
-      "50%      0.005166\n",
-      "75%      0.005494\n",
-      "max      0.006137\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 4/11 (..\\..\\tests\\test_completo.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.005877\n",
-      "std      0.000763\n",
-      "min      0.005350\n",
-      "25%      0.005350\n",
-      "50%      0.005408\n",
-      "75%      0.006197\n",
-      "max      0.007081\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 5/11 (..\\..\\tests\\test_sin_links.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.006016\n",
-      "std      0.001156\n",
-      "min      0.005193\n",
-      "25%      0.005433\n",
-      "50%      0.005616\n",
-      "75%      0.005794\n",
-      "max      0.008046\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 6/11 (..\\..\\tests\\test_trivial.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.005088\n",
-      "std      0.000292\n",
-      "min      0.004748\n",
-      "25%      0.004929\n",
-      "50%      0.004986\n",
-      "75%      0.005321\n",
-      "max      0.005455\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 7/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_200_links_P:0.7.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.006039\n",
-      "std      0.000389\n",
-      "min      0.005613\n",
-      "25%      0.005807\n",
-      "50%      0.005954\n",
-      "75%      0.006202\n",
-      "max      0.006617\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 8/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_400_links_P:0.7.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.005513\n",
-      "std      0.000624\n",
-      "min      0.004470\n",
-      "25%      0.005438\n",
-      "50%      0.005733\n",
-      "75%      0.005878\n",
-      "max      0.006046\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 9/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_600_links_P:0.7.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.004989\n",
-      "std      0.000690\n",
-      "min      0.004344\n",
-      "25%      0.004352\n",
-      "50%      0.004944\n",
-      "75%      0.005337\n",
-      "max      0.005967\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 10/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_800_links_P:0.7.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.006176\n",
-      "std      0.000995\n",
-      "min      0.005333\n",
-      "25%      0.005361\n",
-      "50%      0.005687\n",
-      "75%      0.007125\n",
-      "max      0.007376\n",
-      "dtype: float64\n",
-      "Corriendo experimento: 11/11 (..\\..\\python\\instancias\\3 Principales\\1000_paginas_1000_links_P:0.7.txt)\n",
-      "Estadísticas de los tiempos de ejecución:\n",
-      "count    5.000000\n",
-      "mean     0.005906\n",
-      "std      0.000837\n",
-      "min      0.005345\n",
-      "25%      0.005361\n",
-      "50%      0.005630\n",
-      "75%      0.005836\n",
-      "max      0.007357\n",
-      "dtype: float64\n"
+      "Corriendo experimento: 3/5 (..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt)\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Hubo un error en la experimentacion para el algoritmo con la instancia ..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [38]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m tiempos \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m repeticion \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(numero_de_repeticiones):\n\u001b[1;32m---> 10\u001b[0m     tiempo_de_ejecucion \u001b[38;5;241m=\u001b[39m \u001b[43mcorrer_experimento\u001b[49m\u001b[43m(\u001b[49m\u001b[43marchivo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m;\n\u001b[0;32m     11\u001b[0m     tiempos\u001b[38;5;241m.\u001b[39mappend(tiempo_de_ejecucion)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEstadísticas de los tiempos de ejecución:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36mcorrer_experimento\u001b[1;34m(archivo_instancia, p)\u001b[0m\n\u001b[0;32m      9\u001b[0m exit_code \u001b[38;5;241m=\u001b[39m process\u001b[38;5;241m.\u001b[39mwait()\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Verificar que el proceso no fallo.\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m exit_code \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m: \u001b[38;5;28;01mraise\u001b[39;00m(\u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124mF\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHubo un error en la experimentacion para el algoritmo con la instancia \u001b[39m\u001b[38;5;132;01m{\u001b[39;00marchivo_instancia\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     14\u001b[0m end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m end\u001b[38;5;241m-\u001b[39mstart\n",
+      "\u001b[1;31mException\u001b[0m: Hubo un error en la experimentacion para el algoritmo con la instancia ..\\instancias\\3 Principales\\1000_paginas_600_links_P_0.7.txt."
      ]
     }
    ],
@@ -270,83 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">>>>>> Comparado el archivo test_sin_links.txt.out\n",
-      "Estadísticas de las diferencias:\n",
-      "count    6.0\n",
-      "mean     0.0\n",
-      "std      0.0\n",
-      "min      0.0\n",
-      "25%      0.0\n",
-      "50%      0.0\n",
-      "75%      0.0\n",
-      "max      0.0\n",
-      "dtype: float64\n",
-      ">>>>>> Comparado el archivo test_15_segundos.txt.out\n",
-      "Estadísticas de las diferencias:\n",
-      "count    2001.000000\n",
-      "mean        0.000034\n",
-      "std         0.000028\n",
-      "min         0.000000\n",
-      "25%         0.000016\n",
-      "50%         0.000029\n",
-      "75%         0.000043\n",
-      "max         0.000206\n",
-      "dtype: float64\n",
-      ">>>>>> Comparado el archivo test_aleatorio_desordenado.txt.out\n",
-      "Estadísticas de las diferencias:\n",
-      "count    6.0\n",
-      "mean     0.0\n",
-      "std      0.0\n",
-      "min      0.0\n",
-      "25%      0.0\n",
-      "50%      0.0\n",
-      "75%      0.0\n",
-      "max      0.0\n",
-      "dtype: float64\n",
-      ">>>>>> Comparado el archivo test_30_segundos.txt.out\n",
-      "Estadísticas de las diferencias:\n",
-      "count    3001.000000\n",
-      "mean        0.000015\n",
-      "std         0.000012\n",
-      "min         0.000000\n",
-      "25%         0.000007\n",
-      "50%         0.000013\n",
-      "75%         0.000019\n",
-      "max         0.000102\n",
-      "dtype: float64\n",
-      ">>>>>> Comparado el archivo test_trivial.txt.out\n",
-      "Estadísticas de las diferencias:\n",
-      "count    2.0\n",
-      "mean     0.0\n",
-      "std      0.0\n",
-      "min      0.0\n",
-      "25%      0.0\n",
-      "50%      0.0\n",
-      "75%      0.0\n",
-      "max      0.0\n",
-      "dtype: float64\n",
-      ">>>>>> Comparado el archivo test_completo.txt.out\n",
-      "Estadísticas de las diferencias:\n",
-      "count    6.0\n",
-      "mean     0.0\n",
-      "std      0.0\n",
-      "min      0.0\n",
-      "25%      0.0\n",
-      "50%      0.0\n",
-      "75%      0.0\n",
-      "max      0.0\n",
-      "dtype: float64\n",
-      ">>>>>> Terminado de comparar todos los archivos\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "resultados = [f for f in listdir(\"resultados\") if isfile(join(\"resultados\", f))]\n",
     "esperados = [f for f in listdir(\"resultados_esperados\") if isfile(join(\"resultados_esperados\", f))]\n",
@@ -409,7 +249,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -423,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
