--- a/TP1/python/generar-instancias.ipynb
+++ b/TP1/python/generar-instancias.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def imprimirEncabezadoInstancias(Dataset, cantidadTotalDePaginas, cantidadTotalDeLinks,P):\n",
-    "    with open(F\"instancias/\"+Dataset+\"/\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P:\"+str(P)+\".txt\", \"w\") as f:\n",
+    "    with open(F\"instancias/\"+Dataset+\"/\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P_\"+str(P)+\".txt\", \"w\") as f:\n",
     "        f.write(str(cantidadTotalDePaginas)+\"\\n\")\n",
     "        f.write(str(cantidadTotalDeLinks)+\"\\n\")\n",
     "\n",
     "def imprimirArista(Dataset, cantidadTotalDePaginas, cantidadTotalDeLinks,desde,hasta,P):\n",
-    "    with open(F\"instancias/\"+Dataset+\"/\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P:\"+str(P)+\".txt\", \"r+\") as f:\n",
+    "    with open(F\"instancias/\"+Dataset+\"/\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P_\"+str(P)+\".txt\", \"r+\") as f:\n",
     "        f.seek(0, 2)\n",
     "        f.write(str(desde)+\" \"+str(hasta)+\"\\n\")"
    ]
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,19 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generarUnaInstancia(DataSet,cantidadTotalDePaginas,cantidadTotalDeLinks,cant1,cant2,cant3,P):\n",
     "    imprimirEncabezadoInstancias(DataSet,cantidadTotalDePaginas,cantidadTotalDeLinks,P)\n",
     "    generarInstancia3Principales(DataSet,cantidadTotalDePaginas,cantidadTotalDeLinks,cant1,cant2,cant3,\"\",P)\n",
-    "    print(\"Archivo:\\n\"+F\"instancias/\"+str(DataSet)+\"/\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P:\"+str(P)+\".txt \\n\"+\"Creado con exito\")"
+    "    print(\"Archivo:\\n\"+F\"instancias/\"+str(DataSet)+\"/\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P_\"+str(P)+\".txt \\n\"+\"Creado con exito\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,34 +154,34 @@
      "output_type": "stream",
      "text": [
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_200_links_P:0.7.txt \n",
+      "instancias/3 Principales/1000_paginas_200_links_P_0.7.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_400_links_P:0.7.txt \n",
+      "instancias/3 Principales/1000_paginas_400_links_P_0.7.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_600_links_P:0.7.txt \n",
+      "instancias/3 Principales/1000_paginas_600_links_P_0.7.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_800_links_P:0.7.txt \n",
+      "instancias/3 Principales/1000_paginas_800_links_P_0.7.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_1000_links_P:0.7.txt \n",
+      "instancias/3 Principales/1000_paginas_1000_links_P_0.7.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_500_links_P:0.2.txt \n",
+      "instancias/3 Principales/1000_paginas_500_links_P_0.2.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_500_links_P:0.4.txt \n",
+      "instancias/3 Principales/1000_paginas_500_links_P_0.4.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_500_links_P:0.6.txt \n",
+      "instancias/3 Principales/1000_paginas_500_links_P_0.6.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_500_links_P:0.8.txt \n",
+      "instancias/3 Principales/1000_paginas_500_links_P_0.8.txt \n",
       "Creado con exito\n",
       "Archivo:\n",
-      "instancias/3 Principales/1000_paginas_500_links_P:1.txt \n",
+      "instancias/3 Principales/1000_paginas_500_links_P_1.txt \n",
       "Creado con exito\n"
      ]
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,17 +316,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def imprimirEncabezadoInstanciasConAnillo(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks,PrimeroDelAnillo,P):\n",
-    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(PrimeroDelAnillo)+\"_Inicio_\"+str(cantidadTotalDePaginas)+\"_paginas_P:\"+str(P)+\".txt\", \"w\") as f:\n",
+    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(PrimeroDelAnillo)+\"_Inicio_\"+str(cantidadTotalDePaginas)+\"_paginas_P_\"+str(P)+\".txt\", \"w\") as f:\n",
     "        f.write(str(cantidadTotalDePaginas)+\"\\n\")\n",
     "        f.write(str(cantidadTotalDeLinks+1)+\"\\n\")\n",
     "\n",
     "def imprimirAristaConAnillo(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks,desde,hasta,PrimeroDelAnillo,P):\n",
-    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(PrimeroDelAnillo)+\"_Inicio_\"+str(cantidadTotalDePaginas)+\"_paginas_P:\"+str(P)+\".txt\", \"r+\") as f:\n",
+    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(PrimeroDelAnillo)+\"_Inicio_\"+str(cantidadTotalDePaginas)+\"_paginas_P_\"+str(P)+\".txt\", \"r+\") as f:\n",
     "        f.seek(0, 2)\n",
     "        f.write(str(desde)+\" \"+str(hasta)+\"\\n\")"
    ]
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,18 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def imprimirAristaVersionInstanciasApuntadas(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks,desde,hasta,cantidadApuntando,P):\n",
-    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(cantidadApuntando)+\"_apuntando_\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P:\"+str(P)+\".txt\", \"r+\") as f:\n",
+    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(cantidadApuntando)+\"_apuntando_\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P_\"+str(P)+\".txt\", \"r+\") as f:\n",
     "        f.seek(0, 2)\n",
     "        f.write(str(desde)+\" \"+str(hasta)+\"\\n\")\n",
     "\n",
     "def imprimirEncabezadoInstanciasApuntadas(Carpeta, cantidadTotalDePaginas, cantidadTotalDeLinks,cantidadApuntando,P):\n",
-    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(cantidadApuntando)+\"_apuntando_\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P:\"+str(P)+\".txt\", \"w\") as f:\n",
+    "    with open(F\"instancias/\"+Carpeta+\"/\"+str(cantidadApuntando)+\"_apuntando_\"+str(cantidadTotalDePaginas)+\"_paginas_\"+str(cantidadTotalDeLinks)+\"_links_P_\"+str(P)+\".txt\", \"w\") as f:\n",
     "        f.write(str(cantidadTotalDePaginas)+\"\\n\")\n",
     "        f.write(str(cantidadTotalDeLinks)+\"\\n\")"
    ]
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
